    but not yet implemented.)
  * New v7 mode, which only has one change from v6, and is the new
    recommended default.
  * dh_install: if --sourcedir is not specified, first look for files in
    debian/tmp, and then will look in the current directory. This allows
    dh_install to interoperate with dh_auto_install without needing any
    special parameters.
  * Add a Makefile and simplify this package's own rules file using
    all the new toys.

 -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400

debhelper (6.0.12) unstable; urgency=low

  * dh_icons: Support .xpm format icons. Stop looking for .jpg icons, and
    also, for completeness, support .icon files. This matches the set of
    extensions supported by gtk-update-icon-cache. Closes: #448094

 -- Joey Hess <joeyh@debian.org>  Sat, 19 Apr 2008 16:43:31 -0400

debhelper (6.0.11) unstable; urgency=medium

  * dh_installman: man --recode transparently uncompresses compressed
    pages. So when saving the output back, save it to a non-compressed
    filename (and delete the original, compressed file). Closes: #470913

 -- Joey Hess <joeyh@debian.org>  Tue, 01 Apr 2008 18:31:12 -0400

debhelper (6.0.10) unstable; urgency=low

  * dh_perl: Remove empty directories created by MakeMaker.

 -- Joey Hess <joeyh@debian.org>  Tue, 25 Mar 2008 14:11:57 -0400

debhelper (6.0.9) unstable; urgency=low

  * dh_installman: Don't recode symlinks. Closes: #471196

 -- Joey Hess <joeyh@debian.org>  Sun, 16 Mar 2008 13:53:39 -0400

debhelper (6.0.8) unstable; urgency=low

  * dh_installman: Convert all man pages in the build directory to utf-8, not
    just those installed by the program.

 -- Joey Hess <joeyh@debian.org>  Mon, 10 Mar 2008 18:40:25 -0400

debhelper (6.0.7) unstable; urgency=low

  * dh_lintian: Finally added this since linda is gone and there's only
    lintian to worry about supporting. Closes: #109642, #166320, #206765
    (Thanks to Steve M. Robbins for the initial implementation.)
