@@ -24,6 +24,10 @@ debhelper (7.0.0) UNRELEASED; urgency=low
     debian/tmp, and then will look in the current directory. This allows
     dh_install to interoperate with dh_auto_install without needing any
     special parameters.
+  * dh: New program that runs a series of debhelper commands in a sequence.
+    This can be used to construct very short rules files (as short as 3
+    lines), while still exposing the full power of debhelper when it's
+    needed.
   * Add a Makefile and simplify this package's own rules file using
     all the new toys.
 
